<resources>
    <string name="app_name">Pixiti</string>

    <string name="label_list_retry">Retry</string>

    <string name="label_go_to_settings">Go To App Settings</string>
    <string name="label_go_to_detail">Go To Image Detail</string>
    <string name="label_cancel">Cancel</string>

    <string name="label_detail_info_downloads">Downloads</string>
    <string name="label_detail_info_views">Views</string>
    <string name="label_detail_info_resolution">Resolution</string>

    <string name="label_about_app_title" translatable="false">Pixiti 2021</string>
    <string name="label_about_images_title">Images on this app from</string>
    <string name="label_about_icons_title">Icons on this app from</string>
    <string name="label_about_pixabay_url" translatable="false"><a href="https://www.pixabay.com/" title="Pixabay">www.pixabay.com</a></string>
    <string name="label_about_attribution" translatable="false"><div>Icons made by <a href="https://www.flaticon.com/authors/gregor-cresnar" title="Gregor Cresnar">Gregor Cresnar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> \n<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div></string>

    <string name="label_about">About pixiti</string>

    <string name="label_filter">Filter</string>
    <string name="label_filter_type">Type</string>
    <string name="label_filter_filter">Filter</string>
    <string name="label_filter_orientation">Image Orientation</string>
    <string name="label_filter_safe_Search">SafeSearch</string>

    <string name="desc_list_load_fail">Images couldn\'t load</string>
    <string name="desc_detail_info_resolution" translatable="false">%1$d x %2d</string>
    <string name="desc_search_no_images">No images found</string>
    <string name="desc_share_with">Share With</string>
    <string name="desc_share_image_message">Hello, I want to share this from Pixabay with you;</string>
    <string name="desc_permission_denial_title">To save this photo, we need permission to access media on your device</string>
    <string name="desc_permission_denial_detail">Storage permissions can be enabled under Settings > Apps > Pixiti > Permissions.</string>
    <string name="desc_permission_error">An error occurred while getting permissions!</string>
    <string name="desc_detail_navigation_info">Would you like to see image detail?</string>
    <string name="desc_permission_missing_permission">All permissions are not granted!</string>
    <string name="desc_image_download_error">An error occurred while saving image!</string>
    <string name="desc_download_success">Image Saved</string>
    <string name="desc_search_images">Search Images</string>

    <string name="desc_download_image">Save Image</string>
    <string name="desc_info_image">Image Info</string>
    <string name="desc_share_image">Share Image</string>
    <string name="desc_close">Close</string>

    <string name="desc_count_like_image">Like Count</string>
    <string name="desc_count_fav_image">Favourite Count</string>
    <string name="desc_count_comment_image">Comment Count</string>

    <string name="desc_logo_pixabay" translatable="false">Pixabay Logo</string>
    <string name="desc_image">Image</string>

    <string name="desc_error_limit">Daily Request limit has been reached</string>
    <string name="desc_error_connection">Please Check Your Internet Connection</string>

</resources>