<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/margin_medium"
    android:paddingTop="@dimen/margin_xlarge"
    android:paddingEnd="@dimen/margin_medium"
    android:paddingBottom="@dimen/margin_xlarge">

    <RelativeLayout style="@style/RelativeLayoutInfoDialog">

        <TextView
            style="@style/DetailTextView.Dialog"
            android:layout_alignParentStart="true"
            android:text="@string/label_detail_info_resolution" />

        <TextView
            android:id="@+id/text_view_resolution"
            style="@style/DetailTextView.Dialog"
            android:layout_alignParentEnd="true"
            tools:text="4500x3000" />
    </RelativeLayout>

    <RelativeLayout style="@style/RelativeLayoutInfoDialog">

        <TextView
            style="@style/DetailTextView.Dialog"
            android:layout_alignParentStart="true"
            android:text="@string/label_detail_info_views" />

        <TextView
            android:id="@+id/text_view_view_count"
            style="@style/DetailTextView.Dialog"
            android:layout_alignParentEnd="true"
            tools:text="25958" />
    </RelativeLayout>

    <RelativeLayout style="@style/RelativeLayoutInfoDialog">

        <TextView
            style="@style/DetailTextView.Dialog"
            android:layout_alignParentStart="true"
            android:text="@string/label_detail_info_downloads" />

        <TextView
            android:id="@+id/text_view_download_count"
            style="@style/DetailTextView.Dialog"
            android:layout_alignParentEnd="true"
            tools:text="23.062" />
    </RelativeLayout>

    <View
        android:id="@+id/seperator_detail_info"
        style="@style/Seperator" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexbox_layout_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:flexWrap="wrap"
        app:justifyContent="space_around" />

</LinearLayout>